--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 
 		<dependency>
 			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap-datepicker</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
 			<version>3.6.0</version>
 		</dependency>
@@ -80,3 +86,5 @@
 	</build>
 
 </project>
+
+
